ProdIND/ProdPrograms/force-app/main/default/objects/Legal_Constitution__c/Legal_Constitution__c.object-meta.xml
<CustomObject>
    <label>Legal Constitution</label>
    <nameField>
        <label>Legal Constitution Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Legal_Constitutions</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>