ProdIND/ProdPrograms/force-app/main/default/objects/Legal_Constitution__c/fields/Data__c.field-meta.xml
<CustomField>
    <fullName>Data__c</fullName>
    <label>Data</label>
    <length>20</length>
    <type>Text</type>
</CustomField>