ProdIND/ProdPrograms/force-app/main/default/objects/Legal_Constitution__c/fields/Display__c.field-meta.xml
<CustomField>
    <fullName>Display__c</fullName>
    <label>Display</label>
    <length>90</length>
    <type>Text</type>
</CustomField>